Anexos y memoria compilada, añadido de guía del programador. [#13]

--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,3 +1,8 @@
+@misc{gradle,
+	title = {{Gradle Build Tool}},
+	url = {https://gradle.org/},
+	urldate = {2018-01-04}
+}
 @book{claudia,
 		title = {{Memoria tfg, 2017 }},
 	author    = "Martínez Herrero, Claudia"
