--- a/doc/proyectdoc/bibliografiaAnexos.bib
+++ b/doc/proyectdoc/bibliografiaAnexos.bib
@@ -1,3 +1,9 @@
+@misc{gradle,
+	title = {{Gradle Build Tool}},
+	url = {https://gradle.org/},
+	urldate = {2018-01-04}
+}
+
 @book{claudia,
 	title = {{Memoria tfg, 2017 }},
 	author    = "Martínez Herrero, Claudia"
