--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -124,7 +124,7 @@ SonarQube es una plataforma que tiene versión de escritorio y también está al
 
 
 \subsection{Gradle}\label{gradle}
-\href{https://gradle.org/}{Gradle} Es una herramienta para la automatización de build, puede ser instalada en el sistema operativo o como plugin en eclipse, el plugin tiene ciertas limitaciones, como por ejemplo la especificación de errores. hay veces que no te los dice y tienes que ejecutarlo desde consola, por eso, en nuestro proyecto, se ha utilizado los dos.
+\href{https://gradle.org/}{Gradle} Es una herramienta para la automatización de build, puede ser instalada en el sistema operativo o como plugin en eclipse, el plugin tiene ciertas limitaciones, como por ejemplo la especificación de errores. hay veces que no te los dice y tienes que ejecutarlo desde consola, por eso, en nuestro proyecto, se ha utilizado los dos. \cite{gradle}
 
 
 \section{Librerías}\label{libreruxedas}
